--- a/src/index.css
+++ b/src/index.css
@@ -115,11 +115,14 @@ body {
 }
 
 body {
-  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: grayscale;
   line-height: 1.5;
+  background-color: #121212;
+  color: #fff;
+  font-weight: 400;
 }
 
 img,
@@ -136,16 +139,6 @@ button,
 textarea,
 select {
   font: inherit;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
 }
 
 ol,
@@ -169,4 +162,11 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.conatiner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
