--- a/src/components/shared/Navigation/Navigation.module.css
+++ b/src/components/shared/Navigation/Navigation.module.css
@@ -1,5 +1,8 @@
 .navbar {
-  padding: 35px 0;
+  padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
