--- a/src/pages/Steps/StepAvatar/StepAvatar.module.css
+++ b/src/pages/Steps/StepAvatar/StepAvatar.module.css
@@ -7,10 +7,27 @@
   margin-top: 100px;
 }
 
+.activationWrapper {
+  height: 280px;
+}
+
 .warning {
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 500;
   color: #c4c5c5;
-  margin-top: -22px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.activationHeading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.activationHeading img {
+  width: 30px;
+  height: 30px;
 }
