--- a/src/components/shared/Card/Card.module.css
+++ b/src/components/shared/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   width: 500px;
-  height: 350px;
-  background-color: #1d1d1d;
+  height: 360px;
+  background: var(--bg-dark-2);
   margin-left: auto;
   margin-right: auto;
   padding: 40px 30px;
@@ -11,8 +11,8 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15),
-    inset 0px 0px 0px 0.5px rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px);
+  box-shadow: var(--box-shadow);
 }
 
 .headingWrapper {
