--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+:root {
+  --bg-dark-1: #1a1a1a;
+  --bg-dark-2: #212121;
+  --accent-color: rgba(101, 77, 237, 0.9);
+  --box-shadow: rgb(47 184 255 / 20%) 0px 10px 40px,
+    rgb(47 184 255) 0px 0px 0px 2px inset;
+  --text-color-1: #fff;
+  --text-color-2: #c4c5c5;
+}
+
 html,
 body,
 div,
@@ -119,10 +129,10 @@ body {
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: grayscale;
-  line-height: 1.5;
-  background-color: #121212;
-  color: #fff;
   font-weight: 400;
+  line-height: 1.5;
+  color: var(--text-color-1);
+  background-color: var(--bg-dark-1);
 }
 
 img,
