--- a/src/pages/Steps/StepPhoneEmail/StepPhoneEmail.module.css
+++ b/src/pages/Steps/StepPhoneEmail/StepPhoneEmail.module.css
@@ -13,11 +13,16 @@
   height: 45px;
   background: var(--bg-dark-2);
   border: none;
+  outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.tapButton:focus {
+  box-shadow: var(--box-shadow);
 }
 
 .tapButton img {
