--- a/src/components/shared/Avatar/Avatar.module.css
+++ b/src/components/shared/Avatar/Avatar.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   margin-bottom: 10px;
   overflow: hidden;
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow-2);
 }
 
 .avatarWrapper img {
