--- a/src/components/shared/Card/Card.module.css
+++ b/src/components/shared/Card/Card.module.css
@@ -12,7 +12,7 @@
   justify-content: center;
   gap: 30px;
   backdrop-filter: blur(20px);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow-1);
 }
 
 .headingWrapper {
