--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
   --bg-dark-1: #1a1a1a;
   --bg-dark-2: #212121;
   --accent-color: rgba(101, 77, 237, 0.9);
-  --box-shadow: rgb(47 184 255 / 20%) 0px 10px 40px,
-    rgb(47 184 255) 0px 0px 0px 2px inset;
   --text-color-1: #fff;
   --text-color-2: #c4c5c5;
+  --box-shadow-1: rgb(47 184 255 / 10%) 0px 10px 40px,
+    rgb(47 184 255) 0px 0px 0px 1px inset;
+  --box-shadow-2: rgb(47 184 255 / 20%) 0px 10px 40px,
+    rgb(47 184 255) 0px 0px 0px 2px inset;
 }
 
 html,
