--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -20,7 +20,7 @@
 }
 
 .inviteWrapper a {
-  color: var(--accent-color);
+  color: var(--accent-color-1);
   font-size: 15px;
   font-weight: 600;
   margin-left: 5px;
