--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ body {
   line-height: 1.5;
   color: var(--text-color-1);
   background-color: var(--bg-dark-1);
+  background-image: url('../public/images/stars.svg');
 }
 
 img,
