--- a/src/components/AddRoomModal/AddRoomModal.module.css
+++ b/src/components/AddRoomModal/AddRoomModal.module.css
@@ -16,7 +16,7 @@
   background: var(--bg-dark-2);
   padding: 35px 30px 30px;
   border-radius: 10px;
-  box-shadow: var(--box-shadow-1);
+  box-shadow: var(--box-shadow-2);
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -35,7 +35,7 @@
 }
 
 #closeButton:hover {
-  background-color: var(--accent-color-2);
+  background-color: var(--gray);
 }
 
 .modalHeadingText {
@@ -69,6 +69,7 @@
 
 .active {
   background-color: #262626;
+  box-shadow: var(--box-shadow-2);
 }
 
 .typeBox:hover {
