--- a/src/components/RoomCard/RoomCard.module.css
+++ b/src/components/RoomCard/RoomCard.module.css
@@ -8,6 +8,11 @@
   padding: 13px 15px 8px;
   box-shadow: rgb(255 255 255 / 20%) 0px 0px 0px 0.5px inset;
   cursor: pointer;
+  transition: all 8s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.roomCard:hover {
+  background: var(--bg-dark-1);
 }
 
 .roomTopic {
