--- a/src/index.css
+++ b/src/index.css
@@ -5,23 +5,29 @@
 }
 
 :root {
-  --bg-dark-1: #0f0d0e;
+  --bg-dark-1: #101010;
   --bg-dark-2: #231f20;
   --text-color-1: #f9f4da;
   --text-color-2: #fff;
   --text-color-3: #767980;
   --purple: #a42ce9;
   --blue: #2d7fea;
+  --gold: #ffd500;
   --yellow: #f4f73e;
   --pink: #eb30c1;
-  --gold: #ffd500;
   --aqua: #2febd2;
   --gray: #282c35;
   --border: 0.5px solid rgba(255, 255, 255, 0.3);
-  --box-shadow-1: rgb(47 184 255 / 20%) 0px 10px 40px,
+  --brand-yellow: #fcba28;
+  --box-shadow-1: rgb(252 186 40 / 7%) 0px 10px 40px,
     rgb(252, 186, 40) 0px 0px 0px 1px inset;
-  --box-shadow-2: rgb(47 184 255 / 20%) 0px 10px 40px,
+  --box-shadow-2: rgb(252 186 40 / 7%) 0px 10px 40px,
     rgb(252, 186, 40) 0px 0px 0px 2px inset;
+}
+
+::selection {
+  background-color: var(--brand-yellow);
+  color: var(--bg-dark-1);
 }
 
 html,
@@ -143,7 +149,6 @@ body {
   line-height: 1.5;
   color: var(--text-color-1);
   background-color: var(--bg-dark-1);
-  background-image: url('../public/images/stars.svg');
 }
 
 img,
@@ -222,5 +227,5 @@ table {
 
 .border-item {
   width: 100%;
-  height: 5px;
+  height: 8px;
 }
