Add empty rooms list error message

--- a/src/pages/Rooms/Rooms.module.css
+++ b/src/pages/Rooms/Rooms.module.css
@@ -70,3 +70,17 @@
   gap: 30px;
   padding-bottom: 40px;
 }
+
+.emptyList {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 80px;
+}
+
+.emptyListText {
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
