Add functionality to profile page.

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --pink: #eb30c1;
   --aqua: #2eebd1;
   --gray: #282c35;
+  --danger: #d61c4e;
   --border: 0.5px solid rgba(255, 255, 255, 0.3);
   --brand-yellow: #fcb929;
   --box-shadow-1: rgb(47 235 210 / 7%) 0px 10px 40px,
