--- a/src/pages/Rooms/Rooms.module.css
+++ b/src/pages/Rooms/Rooms.module.css
@@ -1,3 +1,8 @@
+.container {
+  background-image: url('../../../public/images/10.jpg');
+  background-size: cover;
+}
+
 .roomHeader {
   height: 100%;
   display: flex;
