Yay, f**k u eslint. It's working 😭

--- a/src/pages/Steps/StepAvatar/StepAvatar.module.css
+++ b/src/pages/Steps/StepAvatar/StepAvatar.module.css
@@ -9,12 +9,12 @@
 
 .activationWrapper {
   height: 280px;
+  color: var(--brand-yellow);
 }
 
 .warning {
   font-size: 13px;
   font-weight: 500;
-  color: var(--text-color-2);
   margin-bottom: 20px;
 }
 
